selfhost/test/parser/map_error_bad_key.out
Error at %FILE_NAME%:1:3
Unexpected token 'int', expected one of 'string', 'identifier', '(':
  |  { 123: 1 }
       ^